[project]
name = "real-time-latent-consistency-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.5.2",
    "colored>=2.3.0",
    "cuda-python>=12.8.0",
    "diffusers>=0.32.2",
    "fire>=0.7.0",
    "ninja>=1.11.1.3",
    "onnx-graphsurgeon>=0.3.27",
    "onnxruntime>=1.21.0",
    "peft>=0.15.0",
    "polygraphy>=0.49.20",
    "tensorrt>=10.9.0.34",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
]

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F403", "F405", "F823"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["streamdiffusion"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
