[project]
name = "real-time-latent-consistency-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.5.2",
    "colored>=2.3.0",
    "cuda-python>=12.8.0",
    "diffusers>=0.32.2",
    "ninja>=1.11.1.3",
    "onnx-graphsurgeon>=0.3.27",
    "onnxruntime>=1.21.0",
    "peft>=0.15.0",
    "polygraphy>=0.49.20",
    "tensorrt>=10.9.0.34",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "opencv-python>=4.11.0.86"
]
